5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1828_1654.log
== TEST (2019-06-12 14:18:06) 
-- CODE:
from numpy import*

s = input()

v = s.split(',')

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:29:29) 
-- CODE:
from numpy import*

s = input()

v1 = st.split(',')

am = pe = mg = sp = rs = 0
for i in v1:
	if(i.upper() == "AM"):
		am += 1
	elif(i.upper() == "PE"):
		pe += 1
	elif(i.upper() == "MG"):
		mg += 1
	elif(i.upper() == "SP"):
		sp += 1
	elif(i.upper() == "RS"):
		rs += 1

v2 = array([am, pe, mg, sp, rs])
print(max(v2))
print(v2)
-- EXECUTION TIME:
0.963435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1654/main.py", line 5, in <module>
    v1 = st.split(',')
NameError: name 'st' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:32) 
-- CODE:
from numpy import*

s = input()

v1 = st.split(',')

am = pe = mg = sp = rs = 0
for i in v1:
	if(i.upper() == "AM"):
		am += 1
	elif(i.upper() == "PE"):
		pe += 1
	elif(i.upper() == "MG"):
		mg += 1
	elif(i.upper() == "SP"):
		sp += 1
	elif(i.upper() == "RS"):
		rs += 1

v2 = array([am, pe, mg, sp, rs])
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:14) 
-- CODE:
from numpy import*

s = input()

v1 = s.split(',')

am = pe = mg = sp = rs = 0
for i in v1:
	if(i.upper() == "AM"):
		am += 1
	elif(i.upper() == "PE"):
		pe += 1
	elif(i.upper() == "MG"):
		mg += 1
	elif(i.upper() == "SP"):
		sp += 1
	elif(i.upper() == "RS"):
		rs += 1

v2 = array([am, pe, mg, sp, rs])
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:30:42) 
-- CODE:
from numpy import*

s = input()

v1 = s.split(',')

am = pe = mg = sp = rs = 0
for i in v1:
	if(i.upper() == "AM"):
		am += 1
	elif(i.upper() == "PE"):
		pe += 1
	elif(i.upper() == "MG"):
		mg += 1
	elif(i.upper() == "SP"):
		sp += 1
	elif(i.upper() == "RS"):
		rs += 1

v2 = array([am, pe, mg, sp, rs])
print(max(v2))
print(v2)
-- EXECUTION TIME:
1.0324
-- TEST CASE 1:
---- input:
PE,MG,MG,SP,PE,SP,MG,MG,MG,MG,AM,AM,RS,SP,RS,AM,AM,PE,MG,RS
---- correct output:
7
[4 3 7 3 3]
---- user output:
7
[4 3 7 3 3]
-- TEST CASE 2:
---- input:
MG,RS,PE,SP,PE,PE,MG,MG,MG,AM,RS
---- correct output:
4
[1 3 4 1 2]
---- user output:
4
[1 3 4 1 2]
-- TEST CASE 3:
---- input:
SP,MG,AM,PE,MG,MG,MG,AM,MG,PE,RS
---- correct output:
5
[2 2 5 1 1]
---- user output:
5
[2 2 5 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
